# procurement-categorization

./: .env.example  .gitignore  README.md  main.py  pyproject.toml
scripts/: run_column_categorization.py  test_get_api.py
src/column_categorization/: __init__.py  api_check.py  cli_categorize_only.py  cli_common.py  cli_interactive.py  cli_query_first.py  cli_resolution.py  config.py  test_config_template_resolution.py  test_http_api_sink.py  test_main_flow_helpers.py  test_main_query_first_pipeline.py  test_postgres_reader_custom_sql.py  test_raw_to_api_pipeline.py
src/column_categorization/categorization/: __init__.py  llm_categorizer.py
src/column_categorization/db/: postgres_reader.py  relation_listing.py
src/column_categorization/pipelines/: column_categorization.py  etl_execution.py  raw_to_api.py
src/column_categorization/schemas/: __init__.py  categorization.py  load.py
src/column_categorization/sinks/: __init__.py  base.py  database_sink.py  file_sink.py  http_api_sink.py  router.py
src/column_categorization/utils/: batching.py
